--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </section>
 
         <section id="treatments" style="display:none;">
-            <h2>Our Available Treatments</h2>
+            <h2>Available Treatments</h2>
             <div id="addTreatmentSection" style="display:none;"> <div class="form-card">
                     <h3>Add New Treatment</h3>
                     <form id="newTreatmentForm">
@@ -97,7 +97,7 @@
         </section>
 
         <section id="appointments" style="display:none;">
-            <h2>Your Appointments</h2>
+            <h2>Appointments</h2>
             <div id="bookAppointmentSection" class="form-card" style="display:none;"> <h3>Book a New Appointment</h3>
                 <form id="appointmentBookingForm">
                     <div class="form-group">
