--- a/register.html
+++ b/register.html
@@ -7,41 +7,109 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
-<body class="auth-page">
-    <div class="auth-container">
-        <div class="form-card">
-            <h2>GlowCare</h2>
-            <form id="registerForm">
-                <div class="form-group">
-                    <label for="registerName">Name:</label>
-                    <input type="text" id="registerName" placeholder="Your Name" required>
-                </div>
-                <div class="form-group">
-                    <label for="registerEmail">Email:</label>
-                    <input type="email" id="registerEmail" placeholder="your@example.com" required>
-                </div>
-                <div class="form-group">
-                    <label for="registerPassword">Password:</label>
-                    <input type="password" id="registerPassword" placeholder="********" required>
-                </div>
-                <div class="form-group">
-                    <label for="registerRole">Role:</label>
-                    <select id="registerRole">
-                        <option value="pasien">Pasien</option>
-                        <option value="dokter">Dokter</option>
-                        <option value="admin">Admin</option>
-                    </select>
-                </div>
-                <button type="submit" class="btn btn-primary">Register</button>
-            </form>
-            <p id="registerMessage" class="message"></p>
-            <p class="auth-switch">Already have an account? <a href="login.html">Login here</a></p>
+<body>
+    <header class="navbar">
+        <div class="container">
+            <a href="index.html" class="logo">GlowCare</a> <nav>
+                <ul>
+                    <li><a href="index.html" onclick="showSection('home')"><i class="fas fa-home"></i> Home</a></li>
+                    <li><a href="index.html" onclick="showSection('treatments')"><i class="fas fa-spa"></i> Treatments</a></li>
+                    <li id="appointmentsNavItem" style="display:none;"><a href="index.html" onclick="showSection('appointments')"><i class="fas fa-calendar-alt"></i> Appointments</a></li>
+                    <li id="paymentsNavItem" style="display:none;"><a href="index.html" onclick="showSection('payments')"><i class="fas fa-credit-card"></i> Payments</a></li>
+                    <li id="profileNavItem" style="display:none;"><a href="index.html" onclick="showSection('profile')"><i class="fas fa-user"></i> Profile</a></li>
+                    <li id="authNavItem"><a href="login.html"><i class="fas fa-sign-in-alt"></i> Login/Register</a></li>
+                    <li id="logoutNavItem" style="display:none;"><a href="#" onclick="logout()"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
+                </ul>
+            </nav>
         </div>
-    </div>
+    </header>
+
+    <main class="auth-page-main"> <div class="auth-container">
+            <div class="form-card">
+                <h2>GlowCare</h2>
+                <form id="registerForm">
+                    <div class="form-group">
+                        <label for="registerName">Name:</label>
+                        <input type="text" id="registerName" placeholder="Your Name" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="registerEmail">Email:</label>
+                        <input type="email" id="registerEmail" placeholder="your@example.com" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="registerPassword">Password:</label>
+                        <input type="password" id="registerPassword" placeholder="********" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="registerRole">Role:</label>
+                        <select id="registerRole">
+                            <option value="pasien">Pasien</option>
+                            <option value="dokter">Dokter</option>
+                            <option value="admin">Admin</option>
+                        </select>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Register</button>
+                </form>
+                <p id="registerMessage" class="message"></p>
+                <p class="auth-switch">Already have an account? <a href="login.html">Login here</a></p>
+            </div>
+        </div>
+    </main>
 
     <script>
         const USER_SERVICE_URL = 'http://localhost:5001';
 
+        // Variabel dan fungsi navbar yang sama seperti di index.html
+        let accessToken = localStorage.getItem('access_token') || null;
+        let currentUserRole = localStorage.getItem('user_role') || null;
+        let currentUserId = localStorage.getItem('user_id') || null;
+
+        function updateAuthNav() {
+            document.getElementById('appointmentsNavItem').style.display = 'none';
+            document.getElementById('paymentsNavItem').style.display = 'none';
+            document.getElementById('profileNavItem').style.display = 'none';
+            document.getElementById('logoutNavItem').style.display = 'none';
+            document.getElementById('authNavItem').style.display = 'list-item';
+
+            if (accessToken) {
+                document.getElementById('authNavItem').style.display = 'none';
+                document.getElementById('profileNavItem').style.display = 'list-item';
+                document.getElementById('logoutNavItem').style.display = 'list-item';
+
+                if (currentUserRole === 'pasien' || currentUserRole === 'dokter' || currentUserRole === 'admin') {
+                    document.getElementById('appointmentsNavItem').style.display = 'list-item';
+                }
+                if (currentUserRole === 'pasien' || currentUserRole === 'admin') {
+                    document.getElementById('paymentsNavItem').style.display = 'list-item';
+                }
+            }
+        }
+
+        function showSection(sectionId) {
+            // Pada halaman login/register, showSection tidak akan mengubah section di halaman ini,
+            // melainkan akan mengarahkan ke index.html dan menampilkan section yang diminta di sana.
+            if (sectionId === 'home') {
+                window.location.href = 'index.html';
+            } else if (sectionId === 'profile' && !accessToken) {
+                alert('Please log in to view your profile.');
+                window.location.href = 'login.html';
+            } else {
+                window.location.href = `index.html#${sectionId}`; // Arahkan ke index.html dengan hash
+            }
+        }
+
+        function logout() {
+            accessToken = null;
+            currentUserRole = null;
+            currentUserId = null;
+            localStorage.removeItem('access_token');
+            localStorage.removeItem('user_role');
+            localStorage.removeItem('user_id');
+            alert('Logged out successfully.');
+            window.location.href = 'login.html'; // Redirect ke halaman login setelah logout
+        }
+
+        // Logic register
         document.getElementById('registerForm').addEventListener('submit', async (e) => {
             e.preventDefault();
             const name = document.getElementById('registerName').value;
@@ -63,7 +131,7 @@
                     document.getElementById('registerForm').reset();
                     setTimeout(() => {
                         window.location.href = 'login.html';
-                    }, 2000);
+                    }, 2000); // Redirect setelah 2 detik
                 } else {
                     registerMessage.textContent = data.message || 'Registration failed.';
                     registerMessage.className = 'message error';
@@ -73,6 +141,10 @@
                 registerMessage.className = 'message error';
                 console.error('Error:', error);
             }
+        });
+
+        document.addEventListener('DOMContentLoaded', () => {
+            updateAuthNav(); // Update navbar saat halaman dimuat
         });
     </script>
 </body>
