--- a/register.html
+++ b/register.html
@@ -1,151 +1,193 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Register - GlowCare</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+  </head>
+  <body>
     <header class="navbar">
-        <div class="container">
-            <a href="index.html" class="logo">GlowCare</a> <nav>
-                <ul>
-                    <li><a href="index.html" onclick="showSection('home')"><i class="fas fa-home"></i> Home</a></li>
-                    <li><a href="index.html" onclick="showSection('treatments')"><i class="fas fa-spa"></i> Treatments</a></li>
-                    <li id="appointmentsNavItem" style="display:none;"><a href="index.html" onclick="showSection('appointments')"><i class="fas fa-calendar-alt"></i> Appointments</a></li>
-                    <li id="paymentsNavItem" style="display:none;"><a href="index.html" onclick="showSection('payments')"><i class="fas fa-credit-card"></i> Payments</a></li>
-                    <li id="profileNavItem" style="display:none;"><a href="index.html" onclick="showSection('profile')"><i class="fas fa-user"></i> Profile</a></li>
-                    <li id="authNavItem"><a href="login.html"><i class="fas fa-sign-in-alt"></i> Login/Register</a></li>
-                    <li id="logoutNavItem" style="display:none;"><a href="#" onclick="logout()"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
-                </ul>
-            </nav>
-        </div>
+      <div class="container">
+        <a href="index.html" class="logo">GlowCare</a>
+        <nav>
+          <ul>
+            <li>
+              <a href="index.html" onclick="showSection('home')"><i class="fas fa-home"></i> Home</a>
+            </li>
+            <li>
+              <a href="index.html" onclick="showSection('treatments')"><i class="fas fa-spa"></i> Treatments</a>
+            </li>
+            <li id="appointmentsNavItem" style="display: none">
+              <a href="index.html" onclick="showSection('appointments')"><i class="fas fa-calendar-alt"></i> Appointments</a>
+            </li>
+            <li id="paymentsNavItem" style="display: none">
+              <a href="index.html" onclick="showSection('payments')"><i class="fas fa-credit-card"></i> Payments</a>
+            </li>
+            <li id="profileNavItem" style="display: none">
+              <a href="index.html" onclick="showSection('profile')"><i class="fas fa-user"></i> Profile</a>
+            </li>
+            <li id="authNavItem">
+              <a href="login.html"><i class="fas fa-sign-in-alt"></i> Login/Register</a>
+            </li>
+            <li id="logoutNavItem" style="display: none">
+              <a href="#" onclick="logout()"><i class="fas fa-sign-out-alt"></i> Logout</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </header>
 
-    <main class="auth-page-main"> <div class="auth-container">
-            <div class="form-card">
-                <h2>GlowCare</h2>
-                <form id="registerForm">
-                    <div class="form-group">
-                        <label for="registerName">Name:</label>
-                        <input type="text" id="registerName" placeholder="Your Name" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="registerEmail">Email:</label>
-                        <input type="email" id="registerEmail" placeholder="your@example.com" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="registerPassword">Password:</label>
-                        <input type="password" id="registerPassword" placeholder="********" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="registerRole">Role:</label>
-                        <select id="registerRole">
-                            <option value="pasien">Pasien</option>
-                            <option value="dokter">Dokter</option>
-                            <option value="admin">Admin</option>
-                        </select>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Register</button>
-                </form>
-                <p id="registerMessage" class="message"></p>
-                <p class="auth-switch">Already have an account? <a href="login.html">Login here</a></p>
+    <main class="auth-page-main">
+      <div class="auth-container">
+        <div class="form-card">
+          <h2>GlowCare</h2>
+          <form id="registerForm">
+            <div class="form-group">
+              <label for="registerName">Name:</label>
+              <input type="text" id="registerName" placeholder="Your Name" required />
             </div>
+            <div class="form-group">
+              <label for="registerEmail">Email:</label>
+              <input type="email" id="registerEmail" placeholder="your@example.com" required />
+            </div>
+            <div class="form-group">
+              <label for="registerPassword">Password:</label>
+              <input type="password" id="registerPassword" placeholder="********" required />
+            </div>
+            <div class="form-group">
+              <label for="registerRole">Role:</label>
+              <select id="registerRole">
+                <option value="pasien">Pasien</option>
+                <option value="dokter">Dokter</option>
+                <option value="admin">Admin</option>
+              </select>
+            </div>
+            <button type="submit" class="btn btn-primary">Register</button>
+          </form>
+          <p id="registerMessage" class="message"></p>
+          <p class="auth-switch">Already have an account? <a href="login.html">Login here</a></p>
         </div>
+      </div>
     </main>
 
     <script>
-        const USER_SERVICE_URL = 'http://localhost:5001';
+      const USER_SERVICE_URL = "http://localhost:5001";
 
-        // Variabel dan fungsi navbar yang sama seperti di index.html
-        let accessToken = localStorage.getItem('access_token') || null;
-        let currentUserRole = localStorage.getItem('user_role') || null;
-        let currentUserId = localStorage.getItem('user_id') || null;
-
-        function updateAuthNav() {
-            document.getElementById('appointmentsNavItem').style.display = 'none';
-            document.getElementById('paymentsNavItem').style.display = 'none';
-            document.getElementById('profileNavItem').style.display = 'none';
-            document.getElementById('logoutNavItem').style.display = 'none';
-            document.getElementById('authNavItem').style.display = 'list-item';
-
-            if (accessToken) {
-                document.getElementById('authNavItem').style.display = 'none';
-                document.getElementById('profileNavItem').style.display = 'list-item';
-                document.getElementById('logoutNavItem').style.display = 'list-item';
-
-                if (currentUserRole === 'pasien' || currentUserRole === 'dokter' || currentUserRole === 'admin') {
-                    document.getElementById('appointmentsNavItem').style.display = 'list-item';
-                }
-                if (currentUserRole === 'pasien' || currentUserRole === 'admin') {
-                    document.getElementById('paymentsNavItem').style.display = 'list-item';
-                }
-            }
+      // Check backend connection
+      async function checkBackendConnection() {
+        try {
+          const response = await fetch(`${USER_SERVICE_URL}/health`);
+          if (!response.ok) {
+            throw new Error("Backend not responding");
+          }
+          console.log("Backend connection: OK");
+        } catch (error) {
+          console.error("Backend connection failed:", error);
+          const registerMessage = document.getElementById("registerMessage");
+          registerMessage.textContent = "Cannot connect to server. Please make sure the backend is running.";
+          registerMessage.className = "message error";
         }
+      }
 
-        function showSection(sectionId) {
-            // Pada halaman login/register, showSection tidak akan mengubah section di halaman ini,
-            // melainkan akan mengarahkan ke index.html dan menampilkan section yang diminta di sana.
-            if (sectionId === 'home') {
-                window.location.href = 'index.html';
-            } else if (sectionId === 'profile' && !accessToken) {
-                alert('Please log in to view your profile.');
-                window.location.href = 'login.html';
-            } else {
-                window.location.href = `index.html#${sectionId}`; // Arahkan ke index.html dengan hash
-            }
+      // Variabel dan fungsi navbar yang sama seperti di index.html
+      let accessToken = localStorage.getItem("access_token") || null;
+      let currentUserRole = localStorage.getItem("user_role") || null;
+      let currentUserId = localStorage.getItem("user_id") || null;
+
+      function updateAuthNav() {
+        document.getElementById("appointmentsNavItem").style.display = "none";
+        document.getElementById("paymentsNavItem").style.display = "none";
+        document.getElementById("profileNavItem").style.display = "none";
+        document.getElementById("logoutNavItem").style.display = "none";
+        document.getElementById("authNavItem").style.display = "list-item";
+
+        if (accessToken) {
+          document.getElementById("authNavItem").style.display = "none";
+          document.getElementById("profileNavItem").style.display = "list-item";
+          document.getElementById("logoutNavItem").style.display = "list-item";
+
+          if (currentUserRole === "pasien" || currentUserRole === "dokter" || currentUserRole === "admin") {
+            document.getElementById("appointmentsNavItem").style.display = "list-item";
+          }
+          if (currentUserRole === "pasien" || currentUserRole === "admin") {
+            document.getElementById("paymentsNavItem").style.display = "list-item";
+          }
         }
+      }
 
-        function logout() {
-            accessToken = null;
-            currentUserRole = null;
-            currentUserId = null;
-            localStorage.removeItem('access_token');
-            localStorage.removeItem('user_role');
-            localStorage.removeItem('user_id');
-            alert('Logged out successfully.');
-            window.location.href = 'login.html'; // Redirect ke halaman login setelah logout
+      function showSection(sectionId) {
+        // Pada halaman login/register, showSection tidak akan mengubah section di halaman ini,
+        // melainkan akan mengarahkan ke index.html dan menampilkan section yang diminta di sana.
+        if (sectionId === "home") {
+          window.location.href = "index.html";
+        } else if (sectionId === "profile" && !accessToken) {
+          alert("Please log in to view your profile.");
+          window.location.href = "login.html";
+        } else {
+          window.location.href = `index.html#${sectionId}`; // Arahkan ke index.html dengan hash
         }
+      }
 
-        // Logic register
-        document.getElementById('registerForm').addEventListener('submit', async (e) => {
-            e.preventDefault();
-            const name = document.getElementById('registerName').value;
-            const email = document.getElementById('registerEmail').value;
-            const password = document.getElementById('registerPassword').value;
-            const role = document.getElementById('registerRole').value;
-            const registerMessage = document.getElementById('registerMessage');
+      function logout() {
+        accessToken = null;
+        currentUserRole = null;
+        currentUserId = null;
+        localStorage.removeItem("access_token");
+        localStorage.removeItem("user_role");
+        localStorage.removeItem("user_id");
+        alert("Logged out successfully.");
+        window.location.href = "login.html"; // Redirect ke halaman login setelah logout
+      }
 
-            try {
-                const response = await fetch(`${USER_SERVICE_URL}/register`, {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ name, email, password, role })
-                });
-                const data = await response.json();
-                if (response.ok) {
-                    registerMessage.textContent = 'Registration successful! Redirecting to login...';
-                    registerMessage.className = 'message success';
-                    document.getElementById('registerForm').reset();
-                    setTimeout(() => {
-                        window.location.href = 'login.html';
-                    }, 2000); // Redirect setelah 2 detik
-                } else {
-                    registerMessage.textContent = data.message || 'Registration failed.';
-                    registerMessage.className = 'message error';
-                }
-            } catch (error) {
-                registerMessage.textContent = 'Error registering user. Please try again.';
-                registerMessage.className = 'message error';
-                console.error('Error:', error);
-            }
-        });
+      // Register logic with better error handling
+      document.getElementById("registerForm").addEventListener("submit", async (e) => {
+        e.preventDefault();
+        const name = document.getElementById("registerName").value;
+        const email = document.getElementById("registerEmail").value;
+        const password = document.getElementById("registerPassword").value;
+        const role = document.getElementById("registerRole").value;
+        const registerMessage = document.getElementById("registerMessage");
 
-        document.addEventListener('DOMContentLoaded', () => {
-            updateAuthNav(); // Update navbar saat halaman dimuat
-        });
+        // Clear previous messages
+        registerMessage.textContent = "";
+        registerMessage.className = "message";
+
+        try {
+          const response = await fetch(`${USER_SERVICE_URL}/register`, {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json",
+              Accept: "application/json",
+            },
+            body: JSON.stringify({ name, email, password, role }),
+          });
+
+          const data = await response.json();
+
+          if (response.ok) {
+            registerMessage.textContent = "Registration successful! Redirecting to login...";
+            registerMessage.className = "message success";
+            document.getElementById("registerForm").reset();
+            setTimeout(() => {
+              window.location.href = "login.html";
+            }, 2000);
+          } else {
+            registerMessage.textContent = data.message || "Registration failed.";
+            registerMessage.className = "message error";
+          }
+        } catch (error) {
+          console.error("Registration error:", error);
+          registerMessage.textContent = "Cannot connect to server. Please check if the backend is running.";
+          registerMessage.className = "message error";
+        }
+      });
+
+      document.addEventListener("DOMContentLoaded", () => {
+        updateAuthNav();
+        checkBackendConnection();
+      });
     </script>
-</body>
+  </body>
 </html>
